Add initial interface for events
